Added shared Strings

--- a/android/app/src/main/res/layout/activity_movie_detail.xml
+++ b/android/app/src/main/res/layout/activity_movie_detail.xml
@@ -16,6 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:cardElevation="10dp"
+            android:transitionName="posterImage"
             app:cardCornerRadius="20dp">
 
             <ImageView
