--- a/android/app/src/main/res/layout/item_view.xml
+++ b/android/app/src/main/res/layout/item_view.xml
@@ -3,7 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:backgroundTint="@color/lightGray"
     android:background="@color/white"
     android:orientation="vertical">
 
@@ -12,10 +11,11 @@
         android:layout_width="match_parent"
         android:layout_height="230dp"
         android:layout_marginHorizontal="30dp"
-        android:layout_marginTop="35dp"
+        android:layout_marginTop="20dp"
         android:translationZ="1dp"
+        android:transitionName="posterImage"
         app:cardCornerRadius="12dp"
-        app:cardElevation="10dp">
+        app:cardElevation="8dp">
 
         <ImageView
             android:id="@+id/imageView"
@@ -36,9 +36,9 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="30dp"
         android:layout_marginTop="-15dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="20dp"
         app:cardCornerRadius="12dp"
-        app:cardElevation="10dp"
+        app:cardElevation="5dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageContainer">
@@ -54,7 +54,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="30dp"
-                android:text="The Dark Knight"
                 android:textColor="@color/black"
                 android:textSize="14sp"
                 android:textStyle="bold" />
@@ -67,7 +66,6 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginEnd="20dp"
                 android:layout_marginBottom="20dp"
-                android:text="The Dark Knight"
                 android:textColor="@color/gray"
                 android:textSize="12sp" />
         </LinearLayout>
