--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -6,7 +6,7 @@
     <color name="white">#fff</color>
     <color name="black">#000</color>
     <color name="gray">#969696</color>
-    <color name="lightGray">#d2d2d2</color>
+    <color name="lightGray">#90a4ae</color>
     <color name="red">#d50000</color>
     <color name="semiGray">#424242</color>
     <color name="purple">#311b92</color>
